--- a/Manuscript/GBF_Nat_02.tex
+++ b/Manuscript/GBF_Nat_02.tex
@@ -100,13 +100,15 @@ Keywords: social evolution, culture, narratives, stag-hunt
 %\tableofcontents
 
 \section{Introduction}
-
+gwbniwbwnijb
+\cite{skyrms:book:2003}
 
 %\textbf{Collective cooperation and resource dynamics}.
 %
 
-\section{The stag hunt}
+\section{The dynamics stag hunt}
 
+Replicator dynamics
 
 \section{Discussion}
 
