--- a/Manuscript/Stag_Hunt_Game_Basics.tex
+++ b/Manuscript/Stag_Hunt_Game_Basics.tex
@@ -60,7 +60,7 @@ The final output displays the results for each round, showing the number of play
 
 \section{Conclusion}
 This simulation provides a basic yet insightful model of strategic decision-making in uncertain environments. It demonstrates the inherent risk and reward structure of cooperative strategies versus individualistic strategies.
-\end{itemize} 
+%\end{itemize} 
 
 This study serves as a foundation for further exploration into game-theoretic models and their applications in behavioral and evolutionary dynamics.
 
