Replicator_dynamics.tex

--- a/Manuscript/Replicator_dynamics.tex
+++ b/Manuscript/Replicator_dynamics.tex
@@ -93,8 +93,8 @@ This is for a two-player population. If we have $n$ population, we can denote th
 where $i=1,2,3.....(n-1)$
 
 To proceed with the replicator dynamics, we must understand simplex as the next step.
-Simplex is a tool in evolutionary dynamics that helps us understand and visualize how a system evolved through an evolutionary process. We can denote this for $(n-1)$ strategies. But for simplicity, we took a two-player ($n=2$) homogenous process in which $a$ $x_a=1$ and $x_b=0$, or the same goes for $b$, where, $x_a=0$ and $x_b=1$.
-It will represent a line between points $a$ and $b$, with the midpoint being $x-a=x_b=0.5$. 
+Simplex is a tool in evolutionary dynamics that helps us understand and visualize how a system evolved through an evolutionary process. We can denote this for $(n-1)$ strategies. But for simplicity, we took a two-player ($n=2$) homogenous process in which for $a$, $x_a=1$ and $x_b=0$, or the same goes for $b$, where, $x_a=0$ and $x_b=1$.
+It will represent a line between points $a$ and $b$, with the midpoint being $x_a=x_b=0.5$. 
 For another example, if we homogeneously use $ n=3$, it will represent an equatorial triangle, and the midpoint of the simplex will be $x_a=x_b=x_c=1/3$.
 In population genetics, this simplex is known as the de Finetti diagram.
 Let's get back to the replicator dynamics now,
