--- a/Manuscript/GBF_Nat_02.tex
+++ b/Manuscript/GBF_Nat_02.tex
@@ -254,8 +254,8 @@ Appropriate computer code describing the model is available at
 \texttt{ REDACTED for review}.% {\url{https://github.com/tecoevo/beliefs}}.
 
 
-\bibliographystyle{nature}
-\bibliography{references}
+\bibliographystyle{naturemag}
+\bibliography{references.bib}
 
 \renewcommand{\theequation}{SI.\arabic{equation}}
 \setcounter{equation}{0}
